mise a jours dec 2018

--- a/Les_transparent/Python7_TAD.tex
+++ b/Les_transparent/Python7_TAD.tex
@@ -2,10 +2,10 @@
 
 \documentclass{transp_java}
 \usepackage{etex}
-\title[Langage et algorithmique]{Langage et algorithmique \\ CR6. Type Abstrait de Données (TAD)}
+\title[UE 1.1 : Introduction \`{a} la programmation - Python 3]{UE 1.1 : Introduction \`{a} la programmation \\ CR6. Type Abstrait de Données (TAD)}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
-\date{2017/2018}
+\date{2018/2019}
 \institute{ENSTA Bretagne}
 
 
@@ -49,7 +49,7 @@
 \newcommand{\twound}{\rule{2\dunder}{0.4pt}}
 %%%
 \input{tad}
-\input{horloge}
+%\input{horloge}
 \end{document}
 
 
