--- a/Les_transparent/corps/tad.tex
+++ b/Les_transparent/corps/tad.tex
@@ -62,6 +62,7 @@
 \item \only<1>{Classe}
 \only<2-5>{Constructeur}\only<3-5>{ et Variables d'instance}
 \only<6-8>{Méthodes d'instance : \textcolor<6>{red}{égalité}, \textcolor<7>{red}{multiplication}, \textcolor<8>{red}{représentation} }
+
  \end{itemize}
 
   \begin{semiverbatim}
@@ -126,7 +127,33 @@
 \end{frame}
 %################
 
+\begin{frame}
+\frametitle{Exemple d'opérations \chrono}
+\begin{itemize}
+	\item Méthodes d'affichage
+	
+	\begin{table}
+		\centering
+			\begin{tabular}{|l|l|} \hline
+			\hline
+				utilisation &	nom \\
+				\hline
+				\hline
+				conversion en string pour print & 	$\_\_str\_\_(self)$ \\
+				affichage 	& $\_\_repr\_\_(self)$ \\ 
+			 \hline
+			\end{tabular}
+	\end{table}
+	\item Opérations mathématiques
+\end{itemize}
+	\vspace{-0.5cm}
+\begin{figure}
+	\centering
+		\includegraphics[width =11cm, height=2.5cm]{images/operations.png}
+\end{figure}
 
+
+\end{frame}
 
 
 \begin{frame}
@@ -622,8 +649,8 @@
   \frametitle{L'objet \emph{self}\chrono}
   \only<1-3>{
     \begin{itemize}
-    \item \emph{self} : objet représentant le contexte courant
-    \item utilisable uniquement dans une méthode d'instance
+    \item \emph{self} : Objet représentant le contexte courant
+    \item Utilisable uniquement dans une méthode d'instance
 		\item Utilisable quand on fait appel à une méthode d'instance depuis la classe
     \end{itemize}
     \pause
@@ -813,7 +840,7 @@
     \begin{itemize}
     \item Opérations : Addition,, soustraction, multiplication, division, .... 
     
-
+%
   %\begin{center}
 %\begin{tikzpicture}
   %\draw (0,2) -- (0,0) -- (1.5,0) -- (1.5,2);
