--- a/Les_transparent/python05.tex
+++ b/Les_transparent/python05.tex
@@ -2,7 +2,7 @@
 
 \documentclass{transp_java}
 \usepackage{etex}
-\title[UE 1.1 : Introduction \`{a} la programmation - Python 3]{CM. R\'ecursivit\'e}
+\title[UE 1.1 : Introduction \`{a} la programmation - Python 3]{CM5. R\'ecursivit\'e}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 %\date[05/04/2015]{Toumi A. Malek.  Python 3.4}
 \date{2018/2019}
