mise a jour septembre 2019

--- a/Les_transparent/corps/intro.tex
+++ b/Les_transparent/corps/intro.tex
@@ -1,13 +1,13 @@
 \section{Introduction}
 \subsection{Déroulement de cours}
 \begin{frame}
-  \frametitle{Déroulement\chrono}
+  \frametitle{Déroulement}%\chrono}
 	\initclock  % This must be used one time to initialize the clock
   \begin{itemize}
 	\item Intro linux
-  \item Première partie  : les bases de Python
-  \item Deuxième partie :  objet et suite de l'algorithmique 
-  \item Projet informatique : deux parties (sans et avec une interface graphique)
+  \item Les bases de Python + Introduction à la POO
+  \item UE 2.1 : POO objet et suite de l'algorithmique 
+  \item $\longrightarrow$ UE2.4 : Projet informatique : deux parties (sans et avec une interface graphique)
   \end{itemize}
   \pause
   \begin{itemize}
@@ -347,7 +347,7 @@
 
 %
 %\begin{frame}
-  %\frametitle{Histoire des langages\chrono}
+  %\frametitle{Histoire des langages}%\chrono}
  %\only<1->{
  %Historiques des versions \\\url{https://en.wikipedia.org/wiki/History_of_Python}
   %\begin{itemize}
@@ -387,7 +387,7 @@
 
 \subsection{Langage Python}
 \begin{frame}
-  \frametitle{Histoire des langages\chrono}
+  \frametitle{Histoire des langages}%\chrono}
   
   \begin{itemize}
   \item Début : langage machine
@@ -407,7 +407,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Langage Python\chrono}
+  \frametitle{Langage Python}%\chrono}
   \only<10>{
     \centering
 		\includegraphics[width=10cm]{images/comparaisonLangages.png}
@@ -433,7 +433,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Exécution d'un programme Python \chrono}
+  \frametitle{Exécution d'un programme Python }%\chrono}
 	\only<1>{
     \begin{remarque}[Un programme Python]
 		Un programme est une suite d'instructions Python qui peut être exécuté de différentes  manières :
@@ -482,7 +482,7 @@
 
 
 \begin{frame}
-   \frametitle{Exécution d'un programme Python\chrono}
+   \frametitle{Exécution d'un programme Python}%\chrono}
   %%\only<2>{
     %%\includegraphics[width=11cm]{images/compil1}
   %%}
@@ -530,7 +530,7 @@
 %\subsection{Installation et environnement de développement}
 
 \begin{frame}
- \frametitle{Installation d'un environnement Python \chrono}
+ \frametitle{Installation d'un environnement Python }%\chrono}
   
 \begin{itemize}
    \item Sous Windows, Python n'est pas installé par défaut. \pause
@@ -555,7 +555,7 @@
 \end{frame}	
 	
 \begin{frame}
- \frametitle{Environnement de développement\chrono}
+ \frametitle{Environnement de développement}%\chrono}
  
 \begin{itemize}
    \item bloc-note, notepad++, vim, emacs ;
@@ -564,7 +564,7 @@
     \begin{itemize}
 			\item Netbeans (Sun) avec Python/jPython
 			\item Eclipse (IBM) avec le plugin PyDev
-			\item Spyder 
+			\item \textbf{Spyder} 
 			\item Komodo IDE
 			\item LiCipse avec PyDev
 			\item \emph{pyCharm pro}
@@ -577,12 +577,12 @@
 
 % ---------------------------------------------------------------------------------Slide ----
 \begin{frame}
-\frametitle{Python et le calcul scientifique\chrono}
+\frametitle{Python et le calcul scientifique}%\chrono}
 	\begin{itemize}
 		%\justifying
 		\item rapide à apprendre (mais long à maîtriser) ;
 		\item alternative (très) sérieuse à Matlab, Scilab, Octave ;
-		\item bibliothèques de calcul et de visualisation très complète et performante ;
+		\item bibliothèques de calcul et de visualisation très complètes et performantes ;
 		\item parallélisation possible facilement (efficacité, etc.) ;
 		\item communauté nombreuse et active ;
 		\item multi-plateformes (scripts python sur Abaqus sur vos machines -- Windows -- et sur le cluster -- Linux)
@@ -593,7 +593,7 @@
 
 %% ---------------------------------------------------------------------------------Slide ----
 \begin{frame}
-\frametitle{Les principales librairies\chrono}
+\frametitle{Les principales librairies}%\chrono}
 \textbf{1. Calcul scientifique} \\
 \footnotesize{Pour plus d'information, consulter~: \url{http://numpy.org/} et \url{http://scipy.org/}}
 
@@ -607,7 +607,7 @@
 		
 				\begin{itemize}
 		\item broadcasting
-		\item multiplication de matrice
+		\item multiplication de matrices
 		\item traitement du signal
 		\item traitement d'images	
 		\end{itemize}	
@@ -644,7 +644,7 @@
 
 % ---------------------------------------------------------------------------------Slide ----
 \begin{frame}
-\frametitle{Les principales librairies\chrono}
+\frametitle{Les principales librairies}%\chrono}
 \textbf{2. Visualisation de données}\\
 \footnotesize{Plus d'informations sur les sites des modules~: \verb!http://matplotlib.org/!.}
 	\begin{center}
@@ -673,7 +673,7 @@
 
 
 % ---------------------------------------------------------------------------------Slide ----
-\begin{frame}{Quelques bibliothèques\chrono}
+\begin{frame}{Quelques bibliothèques}%\chrono}
 \small
 	\begin{itemize}
 		%\justifying
