--- a/Les_transparent/corps/principes_gen.tex
+++ b/Les_transparent/corps/principes_gen.tex
@@ -2,7 +2,7 @@
 
 \subsection{Généralités : variables et données}
 \begin{frame}
-  \frametitle{Variables en Python\chrono}
+  \frametitle{Variables en Python}%\chrono}
   \begin{itemize}	
 	\item Règles de nommage :
     \begin{itemize}
@@ -18,7 +18,7 @@
   \texttt{surelyReachableObjectsWhichHaveToBeMarkedAsSuch}
 \end{frame}
 \begin{frame}
-  \frametitle{Variables et données\chrono}
+  \frametitle{Variables et données}%\chrono}
   \only<1>{
 	\begin{itemize}
 		\item Tous les éléments manipulés dans un programme python sont des objets (données).
@@ -52,7 +52,7 @@
 	
 
 \begin{frame}[fragile]
-  \frametitle{Variables en Python\chrono}
+  \frametitle{Variables en Python}%\chrono}
 
   \begin{itemize}
   \item Il n'est pas nécessaire de déclarer une variable avant de l'utiliser.
@@ -73,7 +73,7 @@
 	\end{frame}
 	
 	\begin{frame}
-  \frametitle{Fonctions utiles\chrono}
+  \frametitle{Fonctions utiles}%\chrono}
   \begin{itemize}
 
 	\item Quelques fonctions utiles intégrées à Python :
