--- a/Les_transparent/corps/variablesp.tex
+++ b/Les_transparent/corps/variablesp.tex
@@ -41,7 +41,7 @@
 %\end{frame}
 
 \begin{frame}
-\frametitle{Typage des variables\chrono} 
+\frametitle{Typage des variables}%\chrono} 
 \begin{itemize}
 \item \textbf{Les types intégrés de Python}
 \begin{itemize}
@@ -61,7 +61,7 @@
 
 \end{frame}
 \begin{frame}
-\frametitle{Types des variables\chrono}
+\frametitle{Types des variables}%\chrono}
   \begin{exemple}
     \begin{semiverbatim}
  >>> i = 42 
