mise a jour fonction et module

--- a/Les_transparent/corps/fonctions1.tex
+++ b/Les_transparent/corps/fonctions1.tex
@@ -33,11 +33,10 @@
 		\only<2>{\includegraphics[height=4cm]{images/fonction_utilisation1.jpg}}
     \only<3>{
 		\includegraphics[height=3.5 cm]{images/fonction_utilisation.jpg}
-		
 		\begin{remarques}
 		\begin{itemize}
 		  \item Utiliser un nom qui commence par un minuscule\\ 
-			Exexmple : \texttt{uneFonctionBienNommee}
+			Exemple : \texttt{uneFonctionBienNommee}
 			\item La correspondance des paramètres effectifs/formels est positionnelle par défaut
 			\item Pour l'appel, les paramètres et arguments doivent coïncider en nombre par défaut
 		\end{itemize}
@@ -54,6 +53,7 @@
   \end{itemize}
   \begin{exemple}
     \begin{semiverbatim}
+		\vspace{-.5cm}
     \textcolor{red}{def} ajouElemSpecial(liste,element):
 
     \hspace{1cm} nouvElem=[element] * 2
@@ -77,6 +77,7 @@
   
   \begin{exemple}
     \begin{semiverbatim}
+		 \vspace{-.5cm}
       \textcolor{red}{def} operations(ch, val):
 
     \hspace{1cm} \emph{if} ch.count(str(val)) \emph{and} val:
@@ -138,14 +139,15 @@
 		\item <2> Attention : les paramètres positionnels doivent apparaitre avant les paramètres nommés 	  
 	\end{itemize}
 	\begin{exemple}[valeur par défaut]
-  \begin{lstlisting}[frame=None]
-	def hello(name, lang='English'):
-      # name est obligatoire
-	      if lang=='English':
+	\vspace{-0.7cm}
+\begin{lstlisting}[frame=None]
+def hello(name, lang='English'):
+    # name est obligatoire
+    if lang=='English':
          print('Hello ', name)
-      elif lang=='French':
+    elif lang=='French':
         print('Bonjour ', name)
-      
+					
 hello('Claire','French') # => Bonjour Claire
 hello(lang ='French', name = 'Claire') 
 hello('Claire') # => Hello Claire
@@ -164,10 +166,11 @@ hello('Claire') # => Hello Claire
 			\item Les arguments par défaut sont optionnels
 		\end{itemize}
 \end{remarque}
-	\begin{exemple}[Valeur par défaut]
-  \begin{lstlisting}[frame=none]
-	def generer(min=0, max =100):
-	    """ renvoie une liste d'entiers générés
+\begin{exemple}[Valeur par défaut]
+\vspace{-.7cm}
+\begin{lstlisting}[frame=none]
+ def generer(min=0, max=100):
+ """ renvoie une liste d'entiers générés
     aléatoirement entre min et max  """
     < Corps de la fonction>
  # exemples (Appel)			
@@ -191,14 +194,15 @@ hello('Claire') # => Hello Claire
 			\end{remarque}
 	\begin{alertblock}{Exemple : Valeur d'un argument}
   %\begin{semiverbatim}
-	\begin{lstlisting}[frame=none]
-	def aj(b, liste=[1,2]):
+	\vspace{-.7cm}
+\begin{lstlisting}[frame=none]
+def aj(b, liste=[1,2]):
     liste.append(b)
     return liste
   \end{lstlisting}
 	\begin{semiverbatim}
-	lst=aj(5)   \# \only<1>{lst = ?}\only<2->{lst = [1, 2, 5] ?}
-	lst1=aj(6)  \# \only<2>{ lst1 = ?, lst = ?} \only<3>{lst1 =  [1, 2, 6]?} \only<4>{lst = [1,2,5] ?}\only<5>{sol => lst1 = lst = [1, 2, 5, 6]}
+	lst=aj(5)   \# \only<1-4>{lst = [1, 2, 5] V/F?}
+	\only<2->{lst1=aj(6)  \#} \only<2>{lst1 = ?, lst = ?}\only<3>{lst1 =  [1, 2, 6] V/F?}\only<4>{lst = [1,2,5] V/F?}\only<5>{\textcolor{green}{solution} => lst1 = lst = [1, 2, 5, 6]}
 	\end{semiverbatim}
 
   \end{alertblock}
@@ -215,18 +219,17 @@ hello('Claire') # => Hello Claire
 		\end{itemize}
 			\end{remarque}
 	\begin{exemple}[Solution]
-  \begin{lstlisting}[frame=none]
-	def aj(b, liste=None):
+  	\vspace{-.7cm}
+\begin{lstlisting}[frame=none]
+def aj(b, liste=None):
     if liste == None :
-		       liste = [1,2]
-	    liste.append(b)
+        liste = [1,2]
+    liste.append(b)
     return liste
  lst=aj(5)  # lst = [1, 2, 5]
  lst1=aj(6) # lst1 = [1, 2, 6];lst = [1, 2, 5]
 \end{lstlisting}
-
-  \end{exemple}
-
+\end{exemple}
 \end{frame}
 
 \subsection{Passage de paramètres}
@@ -262,9 +265,9 @@ hello('Claire') # => Hello Claire
 	
 	ajoutElem(lst, el)
 	
-	print(el)  \textcolor[rgb]{0.24,0.7,0.44}{\# => el = \only<5> {'quatre'? }\only<6> {'deux' }}
+	print(el)  \textcolor[rgb]{0.24,0.7,0.44}{\# => el = \only<4> {'quatre' V/F? }\only<5-> {'deux' }}
 	
-	print(lst) \textcolor[rgb]{0.24,0.7,0.44}{\# => lst = \only<7> {['un', 'deux']?}}
+	print(lst) \textcolor[rgb]{0.24,0.7,0.44}{\# \only<6-7> {=> lst = ['un', 'deux'] } \only<6>{V/F?}}
 	\end{semiverbatim}
 	}
    \end{exemple}
@@ -275,6 +278,7 @@ hello('Claire') # => Hello Claire
   \frametitle{Passage par variable}%\chrono}
 
   \begin{exemple}[Passage par variable : type modifiable]
+	\vspace{-0.5cm}
     \begin{semiverbatim}
 		\vspace{-1cm}
       \only<1>{
@@ -287,15 +291,12 @@ hello('Claire') # => Hello Claire
 		    liste[0]='douze'
 	lst=['un'] ; el='deux'
 	ajoutsupp(lst, el)
-	print(lst) \textcolor[rgb]{0.24,0.7,0.44}{\# => lst = ['dix', 'deux']?}
+	print(lst) \textcolor[rgb]{0.24,0.7,0.44}{\# => lst = ['dix','deux'] V/F?}
 	ajoutsupp1(lst, el)
-	print(lst)  \textcolor[rgb]{0.24,0.7,0.44}{\# => lst = ['douze', 'six', 'deux']? }
-	}
+	print(lst)  \textcolor[rgb]{0.24,0.7,0.44}{\# => lst = ['douze','six','deux'] V/F? }	}
 	\end{semiverbatim}
-	
-
   \only<2>{
-Résultat de l'exécution :
+Résultats de l'exécution :
     \begin{semiverbatim}
     >>> 
 		
@@ -573,7 +574,7 @@ Résultat de l'exécution :
 	\item Lors de l'importation d'un module, le code présent dans ce module est exécuté.  
 	
 	\begin{itemize}
-		\item Utilisation du corps principal du programme via la variable \verb!\_\kern-.14ex\_name\_\kern-.14ex\_ 
+		\item Utilisation du corps principal du programme via la variable \twound{name}\twound{}
 		
 		Utilisation : 
 		if \twound{name}\twound{} == '\twound{main}\twound{}':!
@@ -585,19 +586,72 @@ Résultat de l'exécution :
 \end{frame}
 
 
-
-
 \begin{frame} [fragile]
   \frametitle{Utilisation de modules}%\chrono}
 	
 	\begin{exemple}[Les modules]
+	\vspace{-0.5cm}
 	{\small
   \begin{lstlisting}[frame=none]
 	# Fichier mon_module.py 
+	
 def carre(nb):
-    return nb*nb
+    return nb**2
 def cube(nb):
-    return nb*nb*nb
+    return nb**3
+
+# ensemble d'instructions dans mon module  
+print('Exemple de la fonction carre()')
+print('  carre(4) => ', carre(4))
+print('Exemple de la fonction cube()')
+print('  cube(3) => ', cube(3))
+
+\end{lstlisting}
+}
+\end{exemple}
+\end{frame}
+
+\begin{frame} [fragile]
+  \frametitle{Utilisation de modules}%\chrono}
+	%\begin{exemple}[Les modules]
+	%\vspace{-0.7cm}
+	{\small
+  \begin{lstlisting}
+# Fichier module_autre.py 
+import mon_module as md # exécute les instructions 
+                        # de "dans mon_module"
+print(md.carre(3))    # => 9
+print(md.cube(2))     # => 8
+\end{lstlisting}
+Exécution du module  'module\_autre.py' 
+\begin{lstlisting}[frame=none]
+$python3.6 module_autre.py # => affiche :
+  Exemple de la fonction carre()
+    carre(4) =>  16
+  Exemple de la fonction cube()
+    cube(3) =>  27
+  9
+  8
+	$
+\end{lstlisting}
+}
+%\end{exemple}
+\end{frame}
+
+\begin{frame} [fragile]
+  \frametitle{Utilisation de modules}%\chrono}
+	\begin{itemize}
+		\item Utilisation du corps principal du programme via la variable \twound{name}\twound{} 
+	\end{itemize}
+	\begin{exemple}[Les modules]
+	\vspace{-.7cm}
+	{\small
+  \begin{lstlisting}[frame=none]
+# Fichier mon_module.py 
+def carre(nb):
+    return nb**2
+def cube(nb):
+    return nb**3
 
 if __name__ == '__main__':
     # module exécuté en tant que script
@@ -611,17 +665,22 @@ if __name__ == '__main__':
 \end{exemple}
 \end{frame}
 
+
 \begin{frame} [fragile]
   \frametitle{Utilisation de modules}%\chrono}
-	
-	\begin{exemple}[Les modules]
+	\begin{itemize}
+		\item Utilisation du corps principal du programme via la variable \twound{name}\twound{} 
+	\end{itemize}
 	{\small
-  \begin{lstlisting}[frame=none]
-	# Fichier module_autre.py 
-import mon_module as md    # => n'exécute pas code
+  \begin{lstlisting}
+# Fichier module_autre.py 
+import mon_module as md # exécute les instructions 
+                      # hors main dans 'mon_module'
 print(md.carre(3))    # => 9
 print(md.cube(2))     # => 8
-# Exécution du module en tant que script 
+\end{lstlisting}
+Exécution du module en tant que script 
+\begin{lstlisting}
 $python3.6 module_autre.py # => affiche :
 9
 8
@@ -632,12 +691,8 @@ $python3.6 mon_module.py   # => affiche  :
     cube(3) =>  27
 \end{lstlisting}
 }
-\end{exemple}
+
 \end{frame}
-
-
-
-
 
 
 
