--- a/Les_transparent/python2_fonction_module.tex
+++ b/Les_transparent/python2_fonction_module.tex
@@ -2,7 +2,7 @@
 
 \documentclass{transp_java}
 \usepackage{etex}
-\title[UE 1.1 : Introduction \`{a} la programmation - Python 3]{CR3. Fonctions et modules}
+\title[UE 1.1 : Intro \`{a} la programmation - Python 3]{CR3. Fonctions et modules}
 \author{A. Malek TOUMI\\ toumiab@ensta-bretagne.fr}
 
 \date{2019/2020}
@@ -21,6 +21,8 @@
   \usepackage{pgfpages}
   \pgfpagesuselayout{4 on 1}[a4paper, border shrink=5mm, landscape]
 }
+
+
 
 
 
